--- a/exemplo2/index.html
+++ b/exemplo2/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css">
-    <title>Media Query - Example2</title>
+    <title>Examplo 2</title>
   </head>
   <body>
-    <nav>
-      <h1>LOGO</h1>
-      <button>Menu</button>
-      <ul>
-        <li>Inicio</li>
-        <li>Sobre</li>
-        <li>Serviços</li>
-        <li>Contatos</li>
-      </ul>
-    </nav>
-    <script>
-      document.querySelector("nav button").addEventListener("click", ()=>{
-        document.querySelector("nav ul").classList.toggle("show")
-      })
-    </script>
+    <div class="container">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </div>
   </body>
 </html>
